# reporting-engine

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
report_wkhtmltopdf_param/: README.rst
report_wkhtmltopdf_param/static/description/: index.html
report_xlsx_helper/: README.rst
report_xlsx_helper/static/description/: index.html
setup/_metapackage/: pyproject.toml
sql_export/: README.rst
sql_export/static/description/: index.html
sql_export/views/: sql_export_view.xml
