[project]
name = "odoo-addons-oca-reporting-engine"
version = "18.0.20250122.1"
dependencies = [
    "odoo-addon-base_comment_template==18.0.*",
    "odoo-addon-bi_sql_editor==18.0.*",
    "odoo-addon-report_wkhtmltopdf_param==18.0.*",
    "odoo-addon-report_xlsx==18.0.*",
    "odoo-addon-sql_export==18.0.*",
    "odoo-addon-sql_request_abstract==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
